# book-browser

./: Cargo.toml  build.rs
src/: get-book-data.rs  get_book_data.rs  main.rs
ui/: add-book-page.slint  app.slint  book-data.slint  main-page.slint
