[package]
name = "book-browser"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# UI
slint = "1.0.2"

# For getting book data from the internet
reqwest = { version = "0.11" }
tokio = { version = "1", features = ["full"] }
serde = "1.0.163"
serde_json = "1.0.96"

# Testing & Search
regex = "1.8.3"

[build-dependencies]
slint-build = "1.0"
